[Hanif]Add: Created book details component

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,136 +1,86 @@
-.header{
-    display: flex;
-    color: white;
+
+.my-header{
+    border:1px solid black;
     width: 100%;
-}
-.toolbar{
+    height:60px;
     display: flex;
-    width: 100%;
-    height: 20px;
     background-color: brown;
 }
-.headermenu{
+.header-title{
     display: flex;
-    flex-direction: row;
     align-items: center;
-    height: 60px;
-    width: 100%;
-    background-color: brown;
-    color: white;
-}
-.headerbooklogo{
-    margin-left: 120px;
-}
-.bookstoreheader{
     position: relative;
-    bottom: 7px;
+    left: 100px;
+}
+.bookstore-image{
+width:30px;
+height:25px;
+}
+.bookstore-title{
+    margin-left: 5px;
+    color: white;
+    font-size: 20px;
+    letter-spacing: 0.25px;
 }
 .search{
     display: flex;
-    justify-content: flex-start;
+    position: relative;
+    left: 156px;
+    background: brown;
     align-items: center;
-    background-color: white;
-    border: #d5d2d2;
-    border-radius: 5px;
-    width: 105%;
-    height: 35px;
-    position: relative;
-    right: 330px;
 }
-.mainprofilelogo{
-    display: flex;
+.search-icon{
+height: 32px;
+background-color: white;
+padding-left: 10px;
+border-radius: 2px;
+}
+.search-text{
+    width:550px;
+    height: 30px;
+    border: none;
+    border-radius: 2px;
     position: relative;
-    right: 193px;
-    top: 37px;
-    width: 20px;
-    margin-left: 130px;
-    background-color: white;
-    border-radius: 15px;
+    right: 2px;
+    font-size: 13px;
 }
 .profile{
     display: flex;
+    flex-direction: column;
     position: relative;
-    top: 26px;
-    right: 75px;
-    font-size: 11px;
+    left: 320px;
+    justify-content: center;
+    height: 80px;
 }
-.cartlogo{
-    display: flex;
-    width: 18px;
+.profile-image{
+    height: 19px;
+    width: 23px
+}
+.profile-text{
+    right: 3px;
+    color: white;
+    font-size: 10px;
+    letter-spacing: 0.5px;
     position: relative;
-    bottom: 20px;
-    margin-right: 200px;
-}
-.cart{
-    position: relative;
-    bottom: 30px;
-    display: flex;
-    font-size: 11px;
-}
-.profilebox{
-        position: fixed;
-        width: 200px;
-        height: 220px;
-        left: 1150px;
-        top: 63px;
-        background-color: white;
-        box-shadow: 0 40px 60px 0 rgba(131, 127, 127, 0.2),
-                      0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.profilelogo{
-    display: flex;
-    position: relative; 
-    left: 20px;   
     bottom: 8px;
 }
-.profilelogoone{
+.cart{
     display: flex;
+    flex-direction: column;
     position: relative;
-    bottom: 45px;
-    left: 20px;
-}
-.profilelogotwo{
-    display: flex;
-    position: relative;
-    bottom: 85px;
-    left: 20px;
-    width: 26px;
-}
-.bhargavi{
-    display: flex;
-    position: relative;
-    left: 23px;
-    color: black;
-    font-weight: 700;
-    font-size: 15px;
-}
-.profilenames{
-    display: flex;
-    position: relative;
-    left: 65px;
-    bottom: 45px;
-}
-.profilenameone{
-    display: flex;
-    position: relative;
-    left: 65px;
-    bottom: 85px;
-}
-.profilenametwo{
-    display: flex;
-    position: relative;
-    left: 65px;
-    bottom: 128px;
-}
-.loginsignupbutton{
-    display: flex;
-    position: relative;
-    left: 20px;
-    bottom: 130px;
+    left: 400px;
     justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    width: 130px;
-    height: 40px;
-    border: 1px solid red;
+    height: 80px;
+}
+.cart-image{
+    height: 19px;
+    width: 23px
+}
+.cart-text{
+    right: -1px;
+    color: white;
+    font-size: 10px;
+    letter-spacing: 0.5px;
+    position: relative;
+    bottom: 8px;
 }
