--- a/src/css/ResetPassword.css
+++ b/src/css/ResetPassword.css
@@ -14,6 +14,8 @@
     padding-left: 5px;
     margin-bottom: 1%;
     font-size: 17px;
+    position: relative;
+    right: -320px;
 }
 .passwordmessage{
     margin-top: 100px;
